Lab2/2_simple_calculator/2b_parser_plus_visitor_to_calculate/Calc.g4
grammar Calc;

prog:   stat+ ;

stat:   expr NEWLINE                # printExpr
    |   ID '=' expr NEWLINE         # assign
    |   NEWLINE                     # blank
    ;

expr:   expr op=MUL expr            # prod
    |   expr op=ADD expr            # plus
    |   INT                         # int
    |   ID                          # id
    ;

MUL :   '*' ;
ADD :   '+' ;
ID  :   [a-zA-Z]+ ;      // match identifiers
INT :   [0-9]+ ;         // match integers
NEWLINE:'\r'? '\n' ;     // return newlines to parser (is end-statement signal)
WS  :   [ \t]+ -> skip ; // toss out whitespace
